--- a/Midterm/Gil Portfolio/projects.html
+++ b/Midterm/Gil Portfolio/projects.html
@@ -34,23 +34,23 @@
     <tr><td>
     <p class="leftSide">Color Drift</p>
     </td><td>
-    <a href="https://itunes.apple.com/us/app/color-drift/id1139572518?mt=8"><img src="img/colorDriftIcon512.png" alt="Gilbert Anwar" title="Gil" style="width:200px;height: 200px"></a>
+    <a href="colorDrift.html"><img src="img/colorDriftIcon512.png" alt="Gilbert Anwar" title="Gil" style="width:200px;height: 200px"></a>
     </td></tr>
     <tr><td>
     <p class="leftSide">Gilly Chaser</p>
 
     </td><td>
-    <a href="https://itunes.apple.com/us/app/gilly-chaser/id1065367248?mt=8"><img src="img/GillyChaserIcon1024.png" alt="Gilbert Anwar" title="Gil" style="width:200px;height: 200px"></a>
+    <a href="gillyChaser.html"><img src="img/GillyChaserIcon1024.png" alt="Gilbert Anwar" title="Gil" style="width:200px;height: 200px"></a>
     </td></tr>
     <tr><td>
     <p class="leftSide">GillyBall</p>
     </td><td>
-    <a href="https://itunes.apple.com/us/app/gillyball/id906037877?mt=8"><img src="img/GillyBallIconLarge.jpg" alt="Gilbert Anwar" title="Gil" style="width:200px;height: 200px"></a>
+    <a href="gillyBall.html"><img src="img/GillyBallIconLarge.jpg" alt="Gilbert Anwar" title="Gil" style="width:200px;height: 200px"></a>
     </td></tr>
     <tr><td>
     <p class="leftSide">Gilly Connect</p>
     </td><td>
-    <a href="https://itunes.apple.com/us/app/gilly-connect/id886919891?mt=8"><img src="img/GillyConnectIconBig.png" alt="Gilbert Anwar" title="Gil" style="width:200px;height: 200px"></a>
+    <a href="gillyConnect.html"><img src="img/GillyConnectIconBig.png" alt="Gilbert Anwar" title="Gil" style="width:200px;height: 200px"></a>
     </td></tr>
     </div>
 
@@ -64,13 +64,13 @@
 <tr><td>
 <p class="rightSide">Color Drift</p>
 </td><td>
-    <a href="https://play.google.com/store/apps/details?id=com.GillyWorks.ColorDrift"><img src="img/colorDriftIcon512.png" alt="Gilbert Anwar" title="Gil" style="max-width: 200px;max-height: 200px;"></a>
+    <a href="colorDrift.html"><img src="img/colorDriftIcon512.png" alt="Gilbert Anwar" title="Gil" style="max-width: 200px;max-height: 200px;"></a>
     </td></tr>
     <tr><td>
 
     <p class="rightSide">Gilly Connect</p>
     </td><td>
-    <a href="https://play.google.com/store/apps/details?id=com.GillyWorks.GillyConnect"><img src="img/GillyConnectIconBig.png" alt="Gilbert Anwar" title="Gil" style="max-width: 200px;max-height: 200px;"></a>
+    <a href="gillyConnect.html"><img src="img/GillyConnectIconBig.png" alt="Gilbert Anwar" title="Gil" style="max-width: 200px;max-height: 200px;"></a>
     </td></tr>
     <tr><td>
     
