--- a/Midterm/Gil Portfolio/home.html
+++ b/Midterm/Gil Portfolio/home.html
@@ -26,23 +26,22 @@
     <hr>
 
     <p> 
-  
-    <center><img src="img/GilSquare.jpg" alt="Gilbert Anwar" title="Gil" style="width: 200px;height: 200px;">
-    
-    <font size="6">Gilbert Anwar</font>
-    </center>
-    
+
+    <div align="center">
+    <h1>Gilbert Anwar</h1>
+    <img src="img/GilSquare.jpg" alt="Gilbert Anwar" title="Gil" style="width: 200px;height: 200px;">
+    </div>
 
     <hr>
     <table style="width:100%">
     <tr>
     <td>
-    <p class="leftSide">January 24, 2017: Gilly Connect for Android is finally out on the Google Play Store!! 
+    <p class="leftSide"><strong>January 24, 2017:</strong> Gilly Connect for Android is finally out on the Google Play Store!! 
     <br><br>Gilly Connect is a multi-directional version of Connect Four with online multiplayer functionalities through GameCenter. (iOS and Android)</p>
     </td>
     <td>
     <div class="rightSide">
-    <a href="#"><img src="img/GillyConnectIconBig.png" alt="Gilbert Anwar" title="Gil" style="width: 200px;height: 200px"></a>
+    <a href="gillyConnect.html"><img src="img/GillyConnectIconBig.png" alt="Gilbert Anwar" title="Gil" style="width: 200px;height: 200px"></a>
     </div>
 
     </td>
@@ -50,23 +49,23 @@
 
     <tr>
     <td>
-    <p class="leftSide">January 14, 2017: A little sneak peek of our next game! :) (Coming soon on iOS)</p>
+    <p class="leftSide"><strong>January 14, 2017:</strong> A little sneak peek of our next game! :) (Coming soon on iOS)</p>
     </td>
     <td>
     <div class="rightSide">
-    <a href="#"><img src="img/elementHockeySneakPeak.jpg" alt="Gilbert Anwar" title="Gil" style="width: 200px"></a>
+    <a href="projects.html"><img src="img/elementHockeySneakPeak.jpg" alt="Gilbert Anwar" title="Gil" style="width: 200px"></a>
     </div>
     </td>
     </tr>
 
     <tr>
     <td>
-    <p class="leftSide">January 6, 2017: Introducing our first game for Android, Color Drift!!<br><br>
+    <p class="leftSide"><strong>January 6, 2017:</strong> Introducing our first game for Android, Color Drift!!<br><br>
     Color Drift is an addicting, color-based reaction game, in which the player taps circles that are the same color as the character in a test of reflexes and color perception. (iOS and Android)</p>
     </td>
     <td>
     <div class="rightSide">
-    <a href="https://play.google.com/store/apps/details?id=com.GillyWorks.ColorDrift&hl=en"><img src="img/colorDriftIcon512.png" alt="Gilbert Anwar" title="Gil" style="width: 200px;height: 200px">
+    <a href="colorDrift.html"><img src="img/colorDriftIcon512.png" alt="Gilbert Anwar" title="Gil" style="width: 200px;height: 200px">
     </div>
     </td>
     </tr>
